ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx  # Adjust this if you're using a different ingress controller
spec:
  rules:
  - host: nginx-test.eu.sbx-001.zivver.org  # Specify your desired subdomain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
